--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Sheep Media</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body data-new-gr-c-s-check-loaded="14.1189.0" data-gr-ext-installed="">
     <div class="container">
         <div class="content">
-            <img src="/static/logo.png" alt="Black Sheep Media Logo" id="logo" width="293" height="300">
+            <img src="logo.png" alt="Black Sheep Media Logo" id="logo" width="293" height="300">
             <section id="hero-section" class="section">
                 <h2>Empowering Newsrooms with<br>Cutting-Edge AI Solutions</h2>
             </section>
@@ -17,7 +17,7 @@
                 <p>At Black Sheep Meedia, we leverage cutting-edge AI technology to revolutionize the mass media landscape. Our mission is to automate and enhance the editorial process, making news gathering and reporting faster, more accurate, and more insightful.</p>
             </section>
             <section id="features-section" class="section">
-                <img src="/static/feature_1.png" alt="Feature 1" class="d-block w-100" width="800" height="328">
+                <img src="feature_1.png" alt="Feature 1" class="d-block w-100" width="800" height="328">
             </section>
             <section id="contact-section" class="section">
                 <h2>Contact Us</h2>
