--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Black Sheep Media</title>
+    <title>Black Sheep Meedia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body data-new-gr-c-s-check-loaded="14.1189.0" data-gr-ext-installed="">
     <div class="container">
         <div class="content">
-            <img src="logo.png" alt="Black Sheep Media Logo" id="logo" width="293" height="300">
+            <img src="logo.png" alt="Black Sheep Meedia Logo" id="logo" width="293" height="300">
             <section id="hero-section" class="section">
                 <h2>Empowering Newsrooms with<br>Cutting-Edge AI Solutions</h2>
             </section>
@@ -21,7 +21,7 @@
             </section>
             <section id="contact-section" class="section">
                 <h2>Contact Us</h2>
-                <p>Email: contact@blacksheepmeedia.com</p>
+                <p>Email: <a href="mailto:contact@blacksheepmeedia.com">Send email</a></p>
             </section>
         </div>
     </div>
