--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </section>
             <section id="contact-section" class="section">
                 <h2>Contact Us</h2>
-                <p>Email: <a href="mailto:contact@blacksheepmeedia.com">Send email</a></p>
+                <p>Email: <a href="mailto:contact@blacksheepmeedia.com" style="color:#ffffff;">contact@blacksheepmeedia.com</a></p>
             </section>
         </div>
     </div>
