--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
     <div class="container">
         <div class="content">
             <img src="logo.png" alt="Black Sheep Meedia Logo" id="logo" width="293" height="300">
-            <section id="hero-section" class="section">
-                <h2>Empowering Newsrooms with<br>Cutting-Edge AI Solutions</h2>
-            </section>
             <section id="about-section" class="section">
                 <h2>About Us</h2>
-                <p>At Black Sheep Meedia, we leverage cutting-edge AI technology to revolutionize the mass media landscape. Our mission is to automate and enhance the editorial process, making news gathering and reporting faster, more accurate, and more insightful.</p>
-            </section>
-            <section id="features-section" class="section">
-                <img src="feature_1.png" alt="Feature 1" class="d-block w-100" width="800" height="328">
+                <p>At Black Sheep Meedia, we leverage cutting-edge AI technology to revolutionize the mass media landscape.</p>
             </section>
             <section id="contact-section" class="section">
                 <h2>Contact Us</h2>
