Update phrase from About section

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             <div class="col-lg-6 order-2 order-lg-1 content">
             <h3>About Us</h3>
             <p class="fst-italic">
-                At Black Sheep Meedia, we create tools to empower editorial teams to work efficiently and focus on impactful storytelling. By streamlining everyday tasks, we help you achieve more in less time.
+                At Black Sheep Meedia, we create tools to empower editorial teams to work efficiently and focus on impactful storytelling. Our solutions help you produce more high-quality content in less time.
             </p>
-            <ul>
+            <!-- <ul>
                 <li><i class="bi bi-check2-all"></i> Automate routine editorial tasks</li>
                 <li><i class="bi bi-check2-all"></i> Boost team productivity and efficiency</li>
                 <li><i class="bi bi-check2-all"></i> Enhance your content's reach and impact</li>
-            </ul>
+            </ul> -->
             </div>
         </div>
         </div>
