--- a/index.html
+++ b/index.html
@@ -1,26 +1,467 @@
-<html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Black Sheep Meedia</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body data-new-gr-c-s-check-loaded="14.1189.0" data-gr-ext-installed="">
-    <div class="container">
-        <div class="content">
-            <img src="logo.png" alt="Black Sheep Meedia Logo" id="logo" width="293" height="300">
-            <section id="about-section" class="section">
-                <h2>About Us</h2>
-                <p>At Black Sheep Meedia, we leverage cutting-edge AI technology to revolutionize the mass media landscape.</p>
-            </section>
-            <section id="contact-section" class="section">
-                <h2>Contact Us</h2>
-                <p>Email: <a href="mailto:contact@blacksheepmeedia.com" style="color:#ffffff;">contact@blacksheepmeedia.com</a></p>
-            </section>
-        </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF‑8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AI Editorial Tools – Empowering Media Teams</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box }
+    body { font-family: Orbitron, sans-serif; color: #222; background: #f9f9f9; scroll-behavior: smooth }
+    a { text-decoration: none; color: inherit }
 
-</body></html>
+    header {
+      position: absolute;
+      top: 20px;
+      left: 30px;
+      z-index: 10;
+    }
+
+    header img {
+      height: 60px;
+    }
+
+    .hero {
+      position: relative;
+      height: 100vh;
+      background: #0e0e0e;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+
+    .hero::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+
+    #bgCanvas {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: 0;
+    }
+
+    .hero-content {
+      position: relative;
+      text-align: center;
+      color: #fff;
+      z-index: 2;
+      animation: fadeIn 1.5s ease-out;
+    }
+
+    .hero-content img {
+      width: 150px;
+      margin-bottom: 20px;
+      animation: fadeIn 2s ease-in;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      opacity: 0;
+      animation: textIn 1s 0.3s forwards;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin: 1rem 0;
+      opacity: 0;
+      animation: textIn 1s 0.8s forwards;
+    }
+
+    .cta {
+      display: inline-block;
+      padding: 0.8em 2em;
+      background: #ff4081;
+      color: #fff;
+      border-radius: 5px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transform: translateY(20px);
+      opacity: 0;
+      animation: textIn 1s 1.3s forwards;
+      transition: transform .3s, background .3s;
+    }
+
+    .cta:hover {
+      transform: translateY(0);
+      background: #e10056;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0 }
+      to { opacity: 1 }
+    }
+
+    @keyframes textIn {
+      from { opacity: 0; transform: translateY(20px) }
+      to { opacity: 1; transform: translateY(0) }
+    }
+
+    section.features {
+      padding: 4em 2em;
+      background: #fff;
+    }
+
+    .feature {
+      max-width: 800px;
+      margin: 2em auto;
+      padding: 2em;
+      background: #f0f0f0;
+      border-radius: 8px;
+      opacity: 0;
+      transform: translateX(-50px);
+      transition: opacity .6s, transform .6s;
+    }
+
+    .feature.visible {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
+    footer {
+      padding: 2em;
+      text-align: center;
+      background: #222;
+      color: #fff;
+    }
+
+    footer a {
+      color: #ff4081;
+    }
+
+    /* New styles for services section */
+    .services-highlight {
+      position: relative;
+      padding: 5em 2em;
+      background: #08182b;
+      color: #fff;
+      overflow: hidden;
+    }
+
+    .services-highlight canvas#servicesCanvas {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: 0;
+    }
+
+    .services-content {
+      position: relative;
+      z-index: 1;
+    }
+
+    .services-highlight .feature {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(6px);
+    }
+
+    .rotating-text {
+      position: relative;
+      min-height: 3.5em; /* or fixed height if you want */
+      margin-top: 1rem;
+      text-align: center;
+      overflow: hidden; /* prevent text from overflowing container */
+      height: 3.5em; /* fix height exactly to text line height */
+    }
+
+    .rotating-text p {
+      font-size: 1.4rem;
+      color: #aee8e0;
+      margin: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      opacity: 0;
+      transition: opacity 0.8s ease-in-out;
+      pointer-events: none;
+      user-select: none;
+    }
+
+    .rotating-text p.active {
+      opacity: 1;
+      pointer-events: auto;
+      user-select: text;
+    }
+
+    .rotating-text .em {
+      font-size: 2rem;
+      color: #6fffd2;
+      font-weight: 700;
+    }
+
+    .vertical-label {
+      position: absolute;
+      left: 5em;
+      top: 75%;
+      transform: rotate(-90deg) translateY(-50%);
+      transform-origin: left center;
+      font-size: 1.2rem;
+      color: rgba(255, 255, 255, 0.2);
+      font-weight: 500;
+      letter-spacing: 0.1em;
+      z-index: 1;
+      pointer-events: none;
+    }
+
+    /*.vertical-scroll-label {
+      position: fixed;
+      left: 5em;
+      top: 75%;
+      transform: rotate(-90deg) translateY(-50%);
+      transform-origin: left center;
+      font-size: 1.2rem;
+      color: rgba(255, 255, 255, 0.2);
+      font-weight: 600;
+      letter-spacing: 0.1em;
+      z-index: 2;
+      pointer-events: none;
+      user-select: none;
+      transition: transform 0.2s ease-out;
+    }*/
+
+
+
+
+  </style>
+</head>
+<body>
+
+  <header>
+    <img src="logo.png" alt="Blacksheep Meedia Logo">
+  </header>
+
+  <section class="hero" id="hero">
+    <div class="vertical-label" style="text-align: center;">
+      <p>Media Products & Consulting Services.</p>
+      <p>Leverage our AI expertise</p>
+    </div>
+    <canvas id="bgCanvas"></canvas>
+    <div class="hero-content">
+      <img src="logo.png" alt="Global News Scanner">
+      <h1>We are Rewriting the Media Landscape</h1>
+      <div class="rotating-text">
+        <p>We <span class="em">Empower</span> your editorial team with AI‑driven tools.</p>
+        <p><span class="em">Optimize</span> your workflow. Save time, stay sharp.</p>
+        <p><span class="em">Deliver</span> better content with less effort.</p>
+      </div>
+      <a href="#features" class="cta">See How It Works</a>
+    </div>
+  </section>
+
+  <section class="features" id="features">
+    <div class="feature"><h2>Content Radar</h2><p>Never miss any relevant development - worldwide.</p></div>
+    <div class="feature"><h2>Content Recommendations</h2><p>We find the golden needle in the content haystack.</p></div>
+    <div class="feature"><h2>Media Insights and Content Drafts</h2><p>We read, analyze, and summarize it for you.</p></div>
+    <div class="feature"><h2>Content Promotion</h2><p><a href="https://reutersinstitute.politics.ox.ac.uk/digital-news-report/2025/dnr-executive-summary">40%-50% of people below age of 45 consume news mainly via social media.</a> <br>We help you reach them.</p></div>
+    <div class="feature"><h2>Support Newsroom AI Transformation</h2><p>Leverage our expertise to become a leader adopting AI.</p></div>
+  </section>
+
+  <section class="services-highlight" id="services">
+    <canvas id="servicesCanvas"></canvas>
+    <div class="services-content">
+      <div class="feature visible">
+        <h2>Our Product</h2>
+        <p style="margin-top: 0.5em;">Use our cutting-edge AI platform tailored for editorial workflows. Automate monitoring, summarization, and content recommendations with ease.</p>
+      </div>
+      <div class="feature visible">
+        <h2>Our Consulting Services</h2>
+        <p style="margin-top: 0.5em;">Not sure if our solution fits your case? Let's talk. We help media houses develop tailored AI strategies to boost efficiency, reach, and relevance.</p>
+        <a href="mailto:contact@blacksheepmeedia.com" class="cta" style="margin-top: 1em;">Talk to Us</a>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Blacksheep Meedia • <a href="mailto:contact@blacksheepmeedia.com">Contact us</a></p>
+    <p>Want to explore a demo or a consultation? <a href="mailto:contact@blacksheepmeedia.com">Let’s talk</a>!</p>
+  </footer>
+
+  <script>
+    // Animate features on scroll
+    const items = document.querySelectorAll('.feature');
+    const onScroll = () => {
+      const y = window.scrollY + window.innerHeight;
+      items.forEach(el => {
+        if (!el.classList.contains('visible') && y > el.offsetTop + 100) {
+          el.classList.add('visible');
+        }
+      });
+    };
+    document.addEventListener('scroll', onScroll);
+    window.addEventListener('load', onScroll);
+
+    // Hero background canvas animation
+    const canvas = document.getElementById('bgCanvas');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    let nodes = Array.from({ length: 80 }, () => ({
+      x: Math.random() * canvas.width,
+      y: Math.random() * canvas.height,
+      vx: (Math.random() - 0.5) * 0.5,
+      vy: (Math.random() - 0.5) * 0.5,
+      radius: 2
+    }));
+
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let node of nodes) {
+        node.x += node.vx;
+        node.y += node.vy;
+
+        if (node.x < 0 || node.x > canvas.width) node.vx *= -1;
+        if (node.y < 0 || node.y > canvas.height) node.vy *= -1;
+
+        ctx.beginPath();
+        ctx.arc(node.x, node.y, node.radius, 0, Math.PI * 2);
+        ctx.fillStyle = '#ff4081';
+        ctx.fill();
+      }
+
+      for (let i = 0; i < nodes.length; i++) {
+        for (let j = i + 1; j < nodes.length; j++) {
+          const dx = nodes[i].x - nodes[j].x;
+          const dy = nodes[i].y - nodes[j].y;
+          const dist = Math.sqrt(dx * dx + dy * dy);
+          if (dist < 100) {
+            ctx.strokeStyle = 'rgba(255, 64, 129, 0.1)';
+            ctx.beginPath();
+            ctx.moveTo(nodes[i].x, nodes[i].y);
+            ctx.lineTo(nodes[j].x, nodes[j].y);
+            ctx.stroke();
+          }
+        }
+      }
+
+      requestAnimationFrame(animate);
+    }
+    animate();
+
+    window.addEventListener('resize', () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
+
+    // Services section comet ray animation
+    const servicesCanvas = document.getElementById('servicesCanvas');
+    const sCtx = servicesCanvas.getContext('2d');
+    servicesCanvas.width = servicesCanvas.offsetWidth;
+    servicesCanvas.height = servicesCanvas.offsetHeight;
+
+    const fiberPaths = Array.from({ length: 20 }, () => {
+      const startX = Math.random() * servicesCanvas.width;
+      const startY = Math.random() * servicesCanvas.height;
+      const endX = startX + (Math.random() - 0.5) * 300;
+      const endY = startY + (Math.random() - 0.5) * 300;
+      return {
+        startX, startY, endX, endY,
+        progress: Math.random(), // starting point of the pulse
+        speed: 0.002 + Math.random() * 0.003
+      };
+    });
+
+    function drawFiberOptics() {
+      sCtx.clearRect(0, 0, servicesCanvas.width, servicesCanvas.height);
+
+      fiberPaths.forEach(path => {
+        // Draw the fiber line (always visible)
+        sCtx.beginPath();
+        sCtx.moveTo(path.startX, path.startY);
+        sCtx.lineTo(path.endX, path.endY);
+        sCtx.strokeStyle = 'rgba(0,255,255,0.05)';
+        sCtx.lineWidth = 1;
+        sCtx.stroke();
+
+        // Update pulse position
+        path.progress += path.speed;
+        if (path.progress > 1) path.progress = 0;
+
+        // Compute comet (pulse) position
+        const pulseX = path.startX + (path.endX - path.startX) * path.progress;
+        const pulseY = path.startY + (path.endY - path.startY) * path.progress;
+
+        // Draw glowing pulse
+        sCtx.beginPath();
+        sCtx.arc(pulseX, pulseY, 2.5, 0, Math.PI * 2);
+        sCtx.fillStyle = 'rgba(0,255,255,1)';
+        sCtx.shadowBlur = 10;
+        sCtx.shadowColor = 'rgba(0,255,255,0.7)';
+        sCtx.fill();
+        sCtx.shadowBlur = 3;
+      });
+
+      requestAnimationFrame(drawFiberOptics);
+    }
+
+    drawFiberOptics();
+
+    window.addEventListener('resize', () => {
+      servicesCanvas.width = servicesCanvas.offsetWidth;
+      servicesCanvas.height = servicesCanvas.offsetHeight;
+    });
+
+    // Rotating sentence effect — only one visible
+    const sentences = document.querySelectorAll('.rotating-text p');
+    let currentIndex = 0;
+
+    function fadeRotate() {
+      const current = sentences[currentIndex];
+
+      // Start fade out by removing active class (opacity transitions to 0)
+      current.classList.remove('active');
+
+      // Wait for fade out transition (800ms)
+      setTimeout(() => {
+        // Hide the faded out element (display:none)
+        current.style.display = 'none';
+
+        // Increment index
+        currentIndex = (currentIndex + 1) % sentences.length;
+
+        const next = sentences[currentIndex];
+        // Show next element (display:block) with opacity 0 initially
+        next.style.display = 'block';
+
+        // Small delay needed before adding active to trigger transition
+        setTimeout(() => {
+          next.classList.add('active');
+        }, 50);
+
+      }, 800);
+
+      // Repeat every 4 seconds total (fade out + visible)
+      setTimeout(fadeRotate, 4000);
+    }
+
+    // On load: show first sentence immediately
+    window.addEventListener('load', () => {
+      sentences.forEach(p => (p.style.display = 'none'));
+      sentences[0].style.display = 'block';
+      sentences[0].classList.add('active');
+
+      setTimeout(fadeRotate, 4000);
+    });
+
+
+    const scrollLabel = document.querySelector('.vertical-scroll-label');
+
+    window.addEventListener('scroll', () => {
+      const scrollY = window.scrollY;
+      scrollLabel.style.transform = `rotate(-90deg) translateY(${scrollY * 0.4}px)`;
+    });
+
+
+
+  </script>
+
+</body>
+</html>
+
